--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://ELbihi.github.io/MedMemic.com",
+  "homepage": "https://elbihi.github.io/MedMemic.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
